add dish groups api
